Add permission endpoint
